# GlassImage

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
OpenCLHeaders/CL/: cl_ext.h  cl_ext_qcom.h  opencl.hpp
android/GlassImageTest/: settings.gradle.kts
android/GlassImageTest/app/: build.gradle.kts
android/GlassImageTest/app/src/androidTest/java/com/example/glassimagetest/: ExampleInstrumentedTest.kt
android/GlassImageTest/app/src/main/: AndroidManifest.xml
android/GlassImageTest/app/src/main/cpp/: CMakeLists.txt  OpenCLHeaders  ShaderCompiler.cpp  headers  jni  native-lib.cpp
android/GlassImageTest/app/src/main/cpp/glassimage/: glsTestV2  include  src
android/GlassImageTest/app/src/main/cpp/headers/: CL  tiffconf.h
android/GlassImageTest/app/src/main/cpp/utils/: cnpy.cpp
android/GlassImageTest/app/src/main/res/layout/: activity_main.xml
android/GlassImageTest/app/src/main/res/values/: strings.xml
android/GlassImageTest/app/src/main/res/values-night/: themes.xml
android/GlassImageTest/app/src/test/java/com/example/glassimagetest/: ExampleUnitTest.kt
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  ShaderCompiler.cpp
android/app/src/main/cpp/glassimage/: glsTestV2  include  src
android/app/src/main/cpp/headers/: CL  tiffio.h
android/app/src/main/java/com/example/glassimagetest/: MainActivity.kt
android/app/src/main/res/values/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/support_libs/headers/: jconfig.h
cmake/toolchains/: clang-linux.cmake  clang-mac.cmake
glsTest/: cl_pipeline.cpp  glassImageTest.cpp
glsTest/Assets/: baboon.tiff
glsTestV2/: blur.metal  blur_utils.metal  glassImageTest.cpp  glassImageTestV2.cpp
include/: float16.hpp  gls_android_support.h  gls_auto_ptr.hpp  gls_cl.hpp  gls_cl_image.hpp  gls_color_science.hpp  gls_dng_lossless_jpeg.hpp  gls_geometry.hpp  gls_gpu_image.hpp  gls_gpu_image_transform.hpp  gls_gpu_transform.hpp  gls_icd_wrapper.h  gls_image.hpp  gls_image_jpeg.h  gls_image_png.h  gls_image_tiff.h  gls_linalg.hpp  gls_logging.h  gls_mtl.hpp  gls_mtl_image.hpp  gls_mtl_resource.hpp  gls_ocl.hpp  gls_ocl_image.hpp  gls_simd.hpp  gls_statistics.hpp  gls_syslog.hpp  gls_tiff_metadata.hpp  kernels.h
include/Metal/: gls.h
include/OpenCL/: gls.h
include/glass_image/: gpu_buffer.h  gpu_image.h  gpu_image_3d.h  gpu_kernel.h  gpu_kernel_args.h  gpu_utils.h
linux/: CMakeLists-shared.txt  CMakeLists.txt  buildGlassImage.sh  buildGlassImageLib-libc.sh  buildGlassImageLib.sh  glsTest.sh
macOS/GlassImageLib/GlassImageLib.xcodeproj/: project.pbxproj
macOS/GlassImageLib/GlassImageLib.xcodeproj/xcshareddata/xcschemes/: GlassImageLib.xcscheme
macOS/GlassImageLibV2/GlassImageLibV2/GlassImageLibV2.xcodeproj/: project.pbxproj
macOS/GlassImageLibV2/GlassImageLibV2/GlassImageLibV2.xcodeproj/xcshareddata/xcschemes/: GlassImageLibV2.xcscheme
macOS/GlassImageTest/GlassImageTest/: cl_pipeline.cpp  cl_pipeline.h
macOS/GlassImageTest/GlassImageTest.xcodeproj/: project.pbxproj
macOS/GlassImageTest/GlassImageTest.xcodeproj/xcshareddata/xcschemes/: GlassImageTest.xcscheme
macOS/GlassImageTest/GlassImageTest/OpenCL/: blur.cl
macOS/GlassImageTestV2/GlassImageTestV2/: main.cpp
macOS/GlassImageTestV2/GlassImageTestV2.xcodeproj/: project.pbxproj
scripts/: device_run.sh  device_test.sh
src/: CMakeLists.txt  glass_image_test.cpp  gls_android_support.cpp  gls_cl.cpp  gls_cl_error.cpp  gls_color_science.cpp  gls_dng_lossless_jpeg.cpp  gls_icd_wrapper.cpp  gls_image_jpeg.cpp  gls_image_png.cpp  gls_image_tiff.cpp  gls_logging.cpp  gls_mtl.cpp  gls_mtl_image.cpp  gls_ocl.cpp  gls_tiff_metadata.cpp  gpu_buffer.cpp  gpu_image.cpp  gpu_image_3d.cpp  gpu_kernel.cpp  gpu_utils.cpp  ocl_check.cpp
tests/profiling/: buffer_based_image.cpp
tests/unit/: CMakeLists.txt  gpu_buffer_test.cpp  gpu_image_3d_test.cpp  gpu_image_test.cpp  gpu_kernel_test.cpp  testing_kernels.h
